--- a/_sass/mod/_sidebar.scss
+++ b/_sass/mod/_sidebar.scss
@@ -5,10 +5,8 @@
   left: -14rem;
   overflow-y: auto;
   width: 14rem;
-  color: rgba(255, 255, 255, .6);
   background-color: #2B2B2B;
   transition: all .3s ease-in-out;
-  // z-index: 60;
   a {
     font-weight: 400;
     color: #fff;
