--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -47,6 +47,7 @@ body {
   -ms-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Hiragino Sans GB", "Heiti TC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+  overflow-x: hidden;
 }
 
 @media (min-width:38em) {
